<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enterMessage"
        android:layout_marginLeft="20dp"/>




    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSend"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="onSendButtonClicked"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="buttonShare"/>


    </LinearLayout>

    <EditText
        android:id="@+id/messageSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/adresse"
        android:layout_marginLeft="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        android:layout_marginLeft="20dp"
        android:onClick="buttonSeach"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/cameraThumbnailImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            android:onClick="onImageViewClicked"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonPicture"
            android:onClick="onTakePictureButtonClicked"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>